# mcp-agui

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml  pyrightconfig.json  test_chat.py  test_simple.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  chat.py  example.py
backend/app/core/: config.py  security.py
backend/app/schemas/: example.py
backend/app/services/: chat_agent.py  mcp_server.py
backend/tests/: test_main.py
frontend/: eslint.config.mjs  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/v1/example/: route.ts
frontend/src/lib/: api.ts
frontend/src/types/: global.d.ts  index.ts
